Fix site title to 'Interior Illusions'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interior Illustrations - Luxury Interior Design</title>
+  <title>Interior Illusions - Luxury Interior Design</title>
   <!-- External CSS -->
   <link rel="stylesheet" href="css/style.css">
   <!-- Font Awesome for social icons -->
@@ -1582,9 +1582,24 @@
      onclick="openLightbox('assets/images/PORTFOLIO/FINALS1/IMG_7920.JPG', this)"></div>
 
    <div class="gallery-item reveal"
-     style="background-image: url('assets/images/PORTFOLIO/FINALS1/IMG_7928.JPG');"
+     style="background-image: url('assets/images/PORTFOLIO/FINALS1/IMG_7851.JPG');"
      data-footnote="Custom Tile"
-     onclick="openLightbox('assets/images/PORTFOLIO/FINALS1/IMG_7928.JPG', this)"></div>
+     onclick="openLightbox('assets/images/PORTFOLIO/FINALS1/IMG_7851.JPG', this)"></div>
+
+   <div class="gallery-item reveal"
+     style="background-image: url('assets/images/PORTFOLIO/FINALS1/IMG_7852.JPG');"
+     data-footnote="Guest Bath Marble Tile Install"
+     onclick="openLightbox('assets/images/PORTFOLIO/FINALS1/IMG_7852.JPG', this)"></div>
+
+   <div class="gallery-item reveal"
+     style="background-image: url('assets/images/PORTFOLIO/FINALS1/IMG_7855.JPG');"
+     data-footnote="Red Oak HardwoodFloor Install"
+     onclick="openLightbox('assets/images/PORTFOLIO/FINALS1/IMG_7855.JPG', this)"></div>
+
+   <div class="gallery-item reveal"
+     style="background-image: url('assets/images/PORTFOLIO/FINALS1/IMG_7857.JPG');"
+     data-footnote="Primary Bath Tile Install"
+     onclick="openLightbox('assets/images/PORTFOLIO/FINALS1/IMG_7857.JPG', this)"></div>
     </div>
   </section>
 
