feat: implement desktop hero slideshow and adjust mobile spacing

--- a/about.html
+++ b/about.html
@@ -1236,9 +1236,9 @@
 
     <!-- Portfolio Section -->
     <section id="work" class="gallery" style="margin-top: 80px;">
-      <div class="section-header reveal" style="text-align: left;">
-        <p class="section-subtitle" style="text-align: left;">PORTFOLIO</p>
-        <h2 class="section-title" style="text-align: left;">Our Latest Work</h2>
+      <div class="section-header reveal">
+        <p class="section-subtitle">PORTFOLIO</p>
+        <h2 class="section-title">Our Latest Work</h2>
       </div>
 
       <div class="gallery-grid">
